# K-lab

./: BUILD.md  CMakeLists.txt  LICENSE  LUA_API.md  PROGRESS.md  README.md  build.sh  build_all.sh  build_macos.sh  build_win32.sh  build_windows.bat  config.cfg  crosshairs.cfg  imgui.ini  scores.db  win32_toolchain.cmake
.github/workflows/: build.yml
assets/sounds/: Hauntr3.json
release_linux/: config.cfg  kim
release_linux/scenarios/: aim_adjust.lua  aim_adjust_pro.lua  air_angelic.lua  bounce_precision_pro.lua  color_bounce.lua  dash_track_bean.lua  easy_gridshot.lua  flickshot.lua  frogtagon.lua  gravity_bounce_track.lua  gridshot.lua  gridshot_sequential.lua  micro_flick_pro.lua  peeking_bean_right.lua  precision_grid_14x14.lua  precision_grid_pro.lua  reaction_test_pro.lua  reactive_track_pro.lua  smooth_track_bean.lua  tracking.lua  wide_flick_pro.lua
release_linux/shaders/: basic.frag
scenarios/: aim_adjust.lua  aim_adjust_hp.lua  aim_adjust_pro.lua  air_angelic_hard.lua  air_angelic_med.lua  bounce_precision_pro.lua  bouncing_juggle.lua  bro.lua  dash_track_bean.lua  easy_gridshot.lua  flickshot.lua  frogtagon.lua  gravity_bounce_score.lua  gravity_bounce_track.lua  grid_7x7_hp.lua  gridshot.lua  gridshot_1.lua  gridshot_sequential.lua  micro_flick_pro.lua  pasu_hard.lua  pasu_medium.lua  peeking_bean.lua  peeking_bean_right.lua  precision_grid_14x14.lua  precision_grid_pro.lua  reaction_test_pro.lua  reactive_track_pro.lua  rotating_circle.lua  seeded_random_test.lua  smooth_track_bean.lua  tracking.lua  wide_flick_pro.lua
shaders/: basic.frag  basic.vert  instanced.frag  instanced.vert  outline.frag  outline.vert
src/: main.cpp
src/engine/: AssetManager.cpp  AssetManager.hpp  Camera.cpp  Camera.hpp  Engine.cpp  Engine.hpp  Handle.hpp  Input.cpp  Input.hpp  Mesh.cpp  Mesh.hpp  Random.hpp  Renderer.cpp  Renderer.hpp  SoundManager.cpp  SoundManager.hpp  TextureManager.cpp  TextureManager.hpp  Window.cpp  Window.hpp
src/game/: AppState.hpp  Entity.hpp  Scenario.cpp  Scenario.hpp  ScoreManager.cpp  ScoreManager.hpp  Target.cpp  Target.hpp
src/scripting/: LuaManager.cpp  LuaManager.hpp
src/ui/: Crosshair.cpp  Crosshair.hpp  Menu.cpp  Menu.hpp  ScenarioBrowser.cpp  ScenarioBrowser.hpp  Settings.cpp  Settings.hpp
